Refactor Killer Apps to Demos and refine Dashboard UI